#1753 add opens module to all scripts (#1754)